tests/mm0_mmu/fail/bad-sort4321.mm0
-- bad modifier order
free provable strict pure sort s4321;